--- a/style.css
+++ b/style.css
@@ -1,23 +1,42 @@
 body {
 	text-align: center;
+	margin: 0;
+}
+
+header {
+	background-color: #F15B31;
+	padding: 30px 20px;
+}
+
+nav {
+	background-color: #00A6B3;
+	padding: 20px 0;
+}
+
+main {
+	width: 850px;
+	margin: 35px auto;
 }
 
 h1 {
 	font-family: raleway;
-	color: #0D2C40;
+	color: #FFFFFF;
 	letter-spacing: 1px;
 	font-weight: 400;
 	font-size: 45px;
 	text-transform: uppercase;
+	margin: 0;
 }
 
 a {
 	font-family: raleway;
-	color: #F15B31;
+	color: #FFFFFF;
 	letter-spacing: 1px;
 	font-weight: 600;
 	font-size: 18px;
 	text-transform: uppercase;
+	margin: 0 20px;
+	text-decoration: none;
 }
 
 h2 {
@@ -26,7 +45,7 @@ h2 {
 	letter-spacing: 1px;
 	font-weight: 600;
 	font-size: 20px;
-	text-transform: uppercase;	
+	text-transform: uppercase;
 }
 
 h3 {
@@ -42,4 +61,8 @@ p {
 	font-family: "droid serif";
 	line-height: 26px;
 	font-size: 18px;
+}
+
+img {
+	margin: 40px 8px 0 8px;
 }
