unit 6 - creating footer

--- a/style.css
+++ b/style.css
@@ -37,6 +37,11 @@ a {
 	text-transform: uppercase;
 	margin: 0 20px;
 	text-decoration: none;
+	border-bottom: 2px solid transparent;
+}
+
+a:hover {
+	border-color: white;
 }
 
 h2 {
@@ -65,4 +70,36 @@ p {
 
 img {
 	margin: 40px 8px 0 8px;
+}
+
+footer {
+	text-transform: uppercase;
+	padding: 0 20px;
+	background-color: #0D2C40;
+	color: white;
+	font-size: 14px;
+	letter-spacing: .08em;
+	font-weight: 500;
+}
+
+.copywrite {
+	float: left;
+}
+
+.message {
+	float: right;
+}
+
+.clearfix:after {
+  visibility: hidden;
+  display: block;
+  content: " ";
+  clear: both;
+  height: 0;
+  font-size: 0;
+}
+
+.name {
+	color: #F15B31;
+	font-weight: 700;
 }
